--- a/sse-build-resources.vcxproj.filters
+++ b/sse-build-resources.vcxproj.filters
@@ -318,6 +318,9 @@
     <ClInclude Include="ext\BSTSmartPointer.h">
       <Filter>ext</Filter>
     </ClInclude>
+    <ClInclude Include="ext\stl_stdio.h">
+      <Filter>ext</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ext\AddressLibrary.cpp">
